Call to undefined method es_cls_common::es_sent_report_plain() 	- Fixed
Call to undefined method es_cls_common::es_sent_report_html() 	- Fixed

********************************Version 1.7************************************************************

* Bug fixed on individual subscriber delete option.
* Bug fixed on individual subscriber resend confirmation mail option.

********************************Version 1.8************************************************************

* Bug fixed on Double Opt-In welcome mail check (Previously it was not checking admin setting for welcome mail).
* Tested up to WordPress 3.9.2

********************************Version 1.9************************************************************

* New option added in admin setting page to update Sent Mail Report  Subject/Content. For each newsletter mail and notification mail, 
plugin will send one report mail to admin with default content. Now with this option, admin can update that default mail content.

********************************Version 2.0************************************************************

* Tested up to WordPress 4.0
* In view subscribers admin page, new option added to filter the email address based on status.
* Paging option added on view subscribers admin page. In default it will show only first 200 emails, you have drop down box to navigate another page (i.e. 201 to 400 emails etc..).
* Warning message fix on email address import page (i.e Strict standards: Only variables should be passed by reference)	- Fixed

********************************Version 2.1************************************************************

* In view subscribers admin page, Filter option and paging moved to the top right corner (Previous version it was in bottom).
* Plugin tested for multisite installation blogs.
http://www.gopiplus.com/work/2014/08/31/email-subscribers-wordpress-plugin-network-activation-for-multisite-installation/