@@ -71,3 +71,11 @@ plugin will send one report mail to admin with default content. Now with this op
 * In view subscribers admin page, Filter option and paging moved to the top right corner (Previous version it was in bottom).
 * Plugin tested for multisite installation blogs.
 http://www.gopiplus.com/work/2014/08/31/email-subscribers-wordpress-plugin-network-activation-for-multisite-installation/
+
+********************************Version 2.2************************************************************
+
+* Warning message issue has been fix on notification mails. previously $post object was submitted to notification mail method without filtering post_id.
+* Added new keywords ###POSTLINK-ONLY###, ###POSTLINK-WITHTITLE### for notification mail content.
+	###POSTLINK-ONLY### 		- Use this key word to add post link in the mail content (Post link cannot be clickable)
+	###POSTLINK-WITHTITLE### 	- Use this key word to display post link with title (Clickable post title)
+	###POSTLINK### 				- Use this key word to display clickable post link.
